--- a/webapp/view/Login.view.xml
+++ b/webapp/view/Login.view.xml
@@ -2,7 +2,7 @@
 	xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
 	<App>
 		<pages>
-			<Page title="{i18n>title}">
+			<Page title="Login">
 				<content></content>
 			</Page>
 		</pages>
