--- a/webapp/view/Index.view.xml
+++ b/webapp/view/Index.view.xml
@@ -1,10 +1,18 @@
-<mvc:View controllerName="ui5.mobile.app.controller.Index" xmlns:html="http://www.w3.org/1999/xhtml"
-	xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
-	<App>
-		<pages>
-			<Page title="{i18n>title}">
-				<content></content>
-			</Page>
-		</pages>
+<mvc:View
+	controllerName="ui5.mobile.app.controller.Index"
+	xmlns:html="http://www.w3.org/1999/xhtml"
+	xmlns="sap.m"
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:l="sap.ui.layout"
+	displayBlock="true">
+	<App id="app" class="ui5Mobile-app">
+		<l:VerticalLayout width="100%">
+			<FlexBox id="splashPage" >
+				111111
+			</FlexBox>
+			<FlexBox id="mainPage">
+				222222
+			</FlexBox>
+		</l:VerticalLayout>
 	</App>
 </mvc:View>
